# spin_htmx_kickstart

./: .gitignore  Cargo.toml  README.md  spin.toml
src/: lib.rs
src/html/: about.html  base.html  home.html  server_time.html
src/htmx/: server_time.rs
src/routes/: about.rs  examples.rs  home.rs  mod.rs
